loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:14: error: Missing closing brace `}' assumed here
while(exitReached()==false){
^